@@ -1,47 +1,79 @@
 package com.example.GestionCourrier.Config;
 
-import org.springframework.context.annotation.Bean;
-import org.springframework.context.annotation.Configuration;
+import com.example.GestionCourrier.Security.JwtAuthenticationFilter;
+import com.example.GestionCourrier.Security.JwtUtil;
+import com.example.GestionCourrier.Service.CustomUserDetailsService;
+
+import org.springframework.context.annotation.*;
+import org.springframework.security.authentication.AuthenticationManager;
+import org.springframework.security.config.annotation.authentication.configuration.AuthenticationConfiguration;
 import org.springframework.security.config.annotation.web.builders.HttpSecurity;
+import org.springframework.security.config.http.SessionCreationPolicy;
+import org.springframework.security.crypto.bcrypt.BCryptPasswordEncoder;
+import org.springframework.security.crypto.password.PasswordEncoder;
 import org.springframework.security.web.SecurityFilterChain;
+import org.springframework.security.web.authentication.UsernamePasswordAuthenticationFilter;
 import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 
-import java.util.Arrays;
 import java.util.List;
 
 @Configuration
 public class SecurityConfig {
 
+    private final CustomUserDetailsService userDetailsService;
+    private final JwtUtil jwtUtil;
+
+    public SecurityConfig(CustomUserDetailsService userDetailsService, JwtUtil jwtUtil) {
+        this.userDetailsService = userDetailsService;
+        this.jwtUtil = jwtUtil;
+    }
+
+    @Bean
+    public JwtAuthenticationFilter authenticationJwtTokenFilter() {
+        return new JwtAuthenticationFilter(jwtUtil, userDetailsService);
+    }
+
     @Bean
     public SecurityFilterChain securityFilterChain(HttpSecurity http) throws Exception {
         http
-                .cors(cors -> cors.configurationSource(corsConfigurationSource())) // Enable CORS
-                .authorizeHttpRequests(authorize -> authorize
-                        .anyRequest().permitAll() // Autoriser toutes les requêtes sans authentification
+                .csrf(csrf -> csrf.disable())
+                .cors(cors -> cors.configurationSource(corsConfigurationSource())) // 👉 ajouter cette ligne
+                .sessionManagement(sess -> sess.sessionCreationPolicy(SessionCreationPolicy.STATELESS))
+                .authorizeHttpRequests(auth -> auth
+                        .requestMatchers("/auth/**").permitAll()  // Public
+                        .requestMatchers("/api/courriers/**").permitAll()//.hasRole("ADMIN")  // SEULEMENT ADMIN
+                        .requestMatchers("/api/decomptes/**").permitAll()//.hasAnyRole("ADMIN", "USER") // ADMIN & USER
+                        .requestMatchers("/api/marches/**").permitAll()//.hasAnyRole("ADMIN", "USER")   // ADMIN & USER
+                        .anyRequest().authenticated() // le reste authentifié
                 )
-                .csrf(csrf -> csrf.disable()) // Désactiver la protection CSRF
-                .headers(headers -> headers
-                        .frameOptions(frameOptions -> frameOptions.disable()) // Nouvelle façon de désactiver frameOptions
-                )
-                .formLogin(formLogin -> formLogin.disable()) // Désactiver le form login
-                .httpBasic(httpBasic -> httpBasic.disable()) // Désactiver l'authentification basique
-                .logout(logout -> logout.disable()); // Désactiver la fonctionnalité de logout
+                .addFilterBefore(authenticationJwtTokenFilter(), UsernamePasswordAuthenticationFilter.class);
 
         return http.build();
     }
 
     @Bean
-    CorsConfigurationSource corsConfigurationSource() {
-        CorsConfiguration configuration = new CorsConfiguration();
-        configuration.setAllowedOrigins(List.of("http://localhost:3000","http://192.168.1.141:3000")); // Allow your React app's origin
-        configuration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "OPTIONS")); // Allowed HTTP methods
-        configuration.setAllowedHeaders(List.of("*")); // Allow all headers
-        configuration.setAllowCredentials(true); // Allow credentials (if needed)
+    public CorsConfigurationSource corsConfigurationSource() {
+        CorsConfiguration  configuration = new CorsConfiguration();
+        configuration.setAllowedOrigins(List .of("http://localhost:3000", "http://192.168.1.44:3000")); // autorise React
+        configuration.setAllowedMethods(List.of("GET", "POST", "PUT", "DELETE", "OPTIONS"));
+        configuration.setAllowedHeaders(List.of("*"));
+        configuration.setAllowCredentials(true); // nécessaire si tu utilises les cookies ou l'authentification
 
-        UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
-        source.registerCorsConfiguration("/**", configuration); // Apply to all paths
+        UrlBasedCorsConfigurationSource  source = new UrlBasedCorsConfigurationSource();
+        source.registerCorsConfiguration("/**", configuration);
         return source;
+    }
+
+
+    @Bean
+    public PasswordEncoder passwordEncoder() {
+        return new BCryptPasswordEncoder();
+    }
+
+    @Bean
+    public AuthenticationManager authenticationManager(AuthenticationConfiguration config) throws Exception {
+        return config.getAuthenticationManager();
     }
 }
